# go2_ros2_sdk

go2_robot_sdk/: setup.py
go2_robot_sdk/go2_robot_sdk/: dimos_integration_bridge.py
go2_robot_sdk/go2_robot_sdk/domain/entities/: robot_config.py
go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
go2_robot_sdk/launch/: robot.launch.py  robot_dimos.launch.py
go2_robot_sdk/scripts/: test_dimos_integration.py
lidar_processor_cpp/include/lidar_processor_cpp/: lidar_to_pointcloud_node.hpp
lidar_processor_cpp/src/: lidar_to_pointcloud_node.cpp
unitree_go/: package.xml  setup.py
unitree_go/resource/: unitree_go
unitree_go/unitree_go/: __init__.py  msg.py
